--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,3 +5,8 @@
 <p>I'm also connected to the Stagecast API - which means when someone updates the back end - I will be updated too.</p>
 
 <p>I can be embedded straight into someone else's website while staying under our control</p>
+
+<div id="output"></div>
+    
+    
+
