--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
 
 <p>I can be embedded straight into someone else's website while staying under our control</p>
 
-<div id="output"></div>
+<h1>{{scdata.title}}</h1>
     
     
 
